<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">trainapp</string>
    <string name="title_activity_dashboard">dashboard</string>
    <string name="email_id">Email Id:-</string>
    <string name="enter_email_id">Enter Email Id</string>
    <string name="password">Password:-</string>
    <string name="Enter_password">Entetr password</string>
    <string name="Signin">Signin</string>
    <string name="Education">Education</string>
    <string name="Forgot_Password">Forgot Password?</string>
    <string name="Create_a_new_Account">Create a new Account</string>
    <string name="First_name">First name:-</string>
    <string name="Enter_your_First_name">Enter your First name</string>
    <string name="Last_name">Last name:-</string>
    <string name="Enter_your_last_name">enter your last name</string>
    <string name="Gender">Gender:-</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Email_Id">Email Id:-</string>
    <string name="Enter_Email_Id">Enter Email Id</string>
    <string name="Password">Password:-</string>
    <string name="Enter_your_Password">Enter your password</string>
    <string name="Confirm_Password">Confirm Password:- </string>
    <string name="Enter_Confirm_Password">Enter Confirm Password</string>
    <string name="Sign_up">Sign up</string>
    <string name="Sign_in">Sign in?</string>
    <string name="Resetpassword">Resetpassword</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Desai Maulik</string>
    <string name="nav_header_subtitle">desaimaulik873@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="profile_details">profile details</string>
    <string name="user_name">user name</string>
    <string name="Email_address">Email address</string>
    <string name="old_password">old password</string>
    <string name="new_password">new password</string>
    <string name="title_activity_recycleview">RecycleviewActivity</string>
    <string name="Standard_6">Standard 6</string>
    <string name="Insert">Insert</string>
    <string name="Update">Update</string>
    <string name="Select">Select</string>
    <string name="Delete">Delete</string>
    <string name="Name">Name</string>
    <string name="Email">Email</string>
</resources>